docker-k8s-workshop/day3/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-helloworld-clusterip
spec:
  type: ClusterIP
  selector:
    app: docker-helloworld
  ports:
    - port: 80
      targetPort: 3000
