docker-k8s-workshop/day3/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-helloworld-nodeport
spec:
  type: NodePort
  selector:
    app: docker-helloworld
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30081
